# pytest-grounding

./: .gitignore  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
grounding/: __init__.py  _capture.py  _normalize.py  _text.py  claim.py  cli.py  guard.py  loaders.py  plugin.py  report_io.py  trace.py
tests/: test_capture.py  test_loaders.py  test_merge.py  test_plugin.py  test_text.py  test_trace.py
